--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav class="navbar">
             <div class="container">
                 <a href="#" class="logo">DeepTv</a>
+                <&nbsp;>
                 <ul class="nav-menu">
                     <li><a href="#">Anasayfa</a></li>
                     <li><a href="#">Diziler</a></li>
@@ -18,6 +19,7 @@
                     <li><a href="#">Yeni ve Popüler</a></li>
                     <li><a href="#">Listem</a></li>
                 </ul>
+                    <&nbsp;>
                 <div class="auth-buttons">
                     <a href="#" class="btn btn-signup">Giriş Yap</a>
                 </div>
@@ -36,7 +38,9 @@
             </div>
         </div>
     </header>
-
+<&nbsp;>
+    <&nbsp;>
+        <&nbsp;>
     <!-- Diğer içerikler buraya eklenebilir -->
     <footer>
         <div class="container">
