--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="https://deaptv.github.io" class="logo">DeapTv</a>
                 
                 <div class="auth-buttons">
-                    <a href="#" class="btn btn-signup">Giriş Yap</a>
+                    <a href="/deepFvD/index.html" class="btn btn-signup">Giriş Yap</a>
                 </div>
             </div>
         </nav>
@@ -26,7 +26,7 @@
                 <h1 class="heroo-title">Sınırsız film, dizi ve çok daha fazlası.</h1>
                 <p class="hero-subtitle">0.99 TL hemen izlemeye başlayın.</p>
                 <div class="email-form">
-                    <form action="/deepFvD/index.html" method="POST">
+                    <form action="deaptv.github.io/deepFvD/index.html" method="POST">
                         <input type="email" name="email" placeholder="E-posta adresiniz" required>
                         <button type="submit" class="btn btn-hero">Şimdi İzlemeye Başla</button>
                     </form>
