--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="heroo-title">Sınırsız film, dizi ve çok daha fazlası.</h1>
                 <p class="hero-subtitle">0.99 TL hemen izlemeye başlayın.</p>
                 <div class="email-form">
-                    <form href="https://deaptv.github.io/deepFvD/index.html" method="POST">
+                    <form action="/deepFvD/index.html" method="POST">
                         <input type="email" name="email" placeholder="E-posta adresiniz" required>
                         <button type="submit" class="btn btn-hero">Şimdi İzlemeye Başla</button>
                     </form>
