--- a/deepFvD/index.html
+++ b/deepFvD/index.html
@@ -128,7 +128,7 @@
 
         <div class="film-tanitim">
             <h2>Çalıntı Stold</h2>
-            <img src="calinti-stold-afis.jpg" alt="Çalıntı Stold Afişi">
+            <img src="/tem/calinti-stold-afis.jpg" alt="Çalıntı Stold Afişi">
             <p>Çalıntı Stold, ... (film açıklaması)</p>
             <a href="izleme-baglantisi">Filmi İzle</a>
         </div>
