--- a/deepFvD/index.html
+++ b/deepFvD/index.html
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="film-tanitim">
             <h2>Koleksiyoncu</h2>
-            <img src="koleksiyoncu-afis.jpg" alt="Koleksiyoncu Afişi">
+            <img src="/tem/koleksiyoncu-afis.jpg" alt="Koleksiyoncu Afişi">
             <p>Koleksiyoncu, ... (film açıklaması)</p>
             <a href="https://ok.ru/videoembed/1184306300351">Filmi İzle</a>
         </div>
